--- a/s1_development_environment/exercise_files/1_Tensors_in_PyTorch.ipynb
+++ b/s1_development_environment/exercise_files/1_Tensors_in_PyTorch.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,11 +119,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.1595]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Calculate the output of this network using the weights and bias tensors.\n"
+    "## Calculate the output of this network using the weights and bias tensors.\n",
+    "activation(torch.sum(features * weights) + bias)"
    ]
   },
   {
@@ -164,11 +176,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.1595]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Calculate the output of this network using matrix multiplication\n"
+    "## Calculate the output of this network using matrix multiplication\n",
+    "activation(torch.mm(features, weights.view(5,1)) + bias)"
    ]
   },
   {
@@ -206,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,11 +264,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.3171]])\n"
+     ]
+    }
+   ],
    "source": [
-    "## Your solution here.\n"
+    "## Your solution here.\n",
+    "ac1 = activation(torch.mm(features, W1) + B1)\n",
+    "ac2 = activation(torch.mm(ac1, W2) + B2)\n",
+    "print(ac2)\n"
    ]
   },
   {
@@ -267,19 +302,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.61995741, 0.33155467, 0.8174536 ],\n",
-       "       [0.34563545, 0.15472967, 0.23112194],\n",
-       "       [0.57911665, 0.7242849 , 0.41691137],\n",
-       "       [0.68045155, 0.49653628, 0.32549209]])"
+       "array([[0.32778968, 0.59168788, 0.55539716],\n",
+       "       [0.10425039, 0.27168078, 0.7052602 ],\n",
+       "       [0.3979146 , 0.1011202 , 0.72856287],\n",
+       "       [0.37073453, 0.95596222, 0.1683076 ]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,21 +328,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([[0.61995741, 0.33155467, 0.81745360],\n",
-       "        [0.34563545, 0.15472967, 0.23112194],\n",
-       "        [0.57911665, 0.72428490, 0.41691137],\n",
-       "        [0.68045155, 0.49653628, 0.32549209]], dtype=torch.float64)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "RuntimeError",
+     "evalue": "Numpy is not available",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Programmering\\dtu_mlops\\s1_development_environment\\exercise_files\\1_Tensors_in_PyTorch.ipynb Cell 19\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Programmering/dtu_mlops/s1_development_environment/exercise_files/1_Tensors_in_PyTorch.ipynb#X23sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m torch\u001b[39m.\u001b[39mset_printoptions(precision\u001b[39m=\u001b[39m\u001b[39m8\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Programmering/dtu_mlops/s1_development_environment/exercise_files/1_Tensors_in_PyTorch.ipynb#X23sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m b \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mfrom_numpy(a)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Programmering/dtu_mlops/s1_development_environment/exercise_files/1_Tensors_in_PyTorch.ipynb#X23sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m b\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: Numpy is not available"
+     ]
     }
    ],
    "source": [
