--- a/Opsaet.ipynb
+++ b/Opsaet.ipynb
@@ -780,7 +780,8 @@
    "source": [
     "!pip install numpy\n",
     "!pip install matplotlib\n",
-    "!pip install torch"
+    "!pip install torch\n",
+    "!pip install torchvision"
    ]
   }
  ],
