--- a/s1_development_environment/exercise_files/3_Training_Neural_Networks.ipynb
+++ b/s1_development_environment/exercise_files/3_Training_Neural_Networks.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,9 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(2.2896, grad_fn=<NllLossBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "# Build a feed-forward network\n",
     "model = nn.Sequential(nn.Linear(784, 128),\n",
@@ -144,15 +152,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(2.2948, grad_fn=<NllLossBackward0>)\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Build a feed-forward network\n",
-    "model = \n",
+    "model = nn.Sequential(nn.Linear(784, 128),\n",
+    "                      nn.ReLU(),\n",
+    "                      nn.Linear(128, 64),\n",
+    "                      nn.ReLU(),\n",
+    "                      nn.Linear(64, 10),\n",
+    "                      nn.LogSoftmax(dim=1))\n",
     "\n",
     "# TODO: Define the loss\n",
-    "criterion = \n",
+    "criterion = nn.NLLLoss()\n",
     "\n",
     "### Run this to check your work\n",
     "# Get our data\n",
@@ -503,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
